<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nuaa.bluetoothlocation.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        >
        <TextView
            android:id="@+id/bleDevice1_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bleDevice1_tip"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/bleDevice1_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="未就绪"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="50dp"
            android:paddingStart="50dp"
            android:text="@string/rssi"/>
        <TextView
            android:id="@+id/bleDevice1_rssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        >
        <TextView
            android:id="@+id/bleDevice2_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bleDevice2_tip"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/bleDevice2_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="未就绪"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="50dp"
            android:paddingStart="50dp"
            android:text="@string/rssi"/>
        <TextView
            android:id="@+id/bleDevice2_rssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        >
        <TextView
            android:id="@+id/bleDevice3_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bleDevice3_tip"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/bleDevice3_ready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="未就绪"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="50dp"
            android:paddingStart="50dp"
            android:text="@string/rssi"/>
        <TextView
            android:id="@+id/bleDevice3_rssi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:text="0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        >
        <TextView
            android:id="@+id/room_x_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_x_tip"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/room_x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        >
        <TextView
            android:id="@+id/room_y_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_y_tip"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/room_y"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        >
        <Button
            android:id="@+id/refresh_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"/>
        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingRight="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="40dp"
        >
        <TextView
            android:id="@+id/location_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_tip"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingStart="40dp"
            android:text="(0,0)"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>
